@@ -1,5 +1,7 @@
 2007-11-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* conf/YarpVersion.cmake: froze version 2.1.8
+
 	* src/libYARP_OS/src/PortCore.cpp: Returned structured
 	report on port status, rather than just human-readable
 	message.  See Port::getReport and BufferedPort::getReport
